2005-04-20 Paul Jakma <paul@dishone.st>

	* Makefile.am: Add @INCLUDES@ and srcdir to allow out-of-tree
	  builds to work.

2004-06-30  Greg Troxel  <gdt@poblano.ir.bbn.com>

	* Makefile.am: Add libtool/shlib support.

2003-01-10  Ralph Keller <keller@tik.ee.ethz.ch>
	* New ChangeLog
	
2003-01-08  Ralph Keller <keller@tik.ee.ethz.ch>
	* apiclient message passing bug resolved 
	* (proposed by Masahiko)

2002-10-09  Ralph Keller <keller@tik.ee.ethz.ch>
	* Includes patch in OSPFd for ISM, NSM, neighbor
	
2002-09-16  Ralph Keller <keller@tik.ee.ethz.ch>
	* Current patch vs. Zebra-0.93b 

2002-08-22  Ralph Keller <keller@tik.ee.ethz.ch>
	* Bugfix: LSA updates are now received only once even 
	* if multiple opaque types are registered 

2002-08-06  Ralph Keller <keller@tik.ee.ethz.ch>
	* Upgrade of OSPF API to Zebra-0.93a.

2002-06-13  Ralph Keller <keller@tik.ee.ethz.ch>
	* Opaque LSA origination bug fixed by Masahiko. 
	* This code is based on 0.93-pre

2002-05-03  Ralph Keller <keller@tik.ee.ethz.ch>
	* Upgrade to newest Zebra from CVS repository. ospf_flood_through
	* function did not work after upgrade. Function 
	* ospf_apiserver_flood_opaque_lsa added. Also byte order problem
	* with port numbers resolved.

2002-05-02  Ralph Keller <keller@tik.ee.ethz.ch>

	* new autoconf and automake files, now called configure.in
	* instead of configure.ac

2002-04-24  Ralph Keller <keller@tik.ee.ethz.ch>

	* reverse channel now works (syncport and syncport+1)
	* ospf_apiclient.c: standard includes removed (not needed)
	* bzero replaced with memset

2002-04-18  Ralph Keller <keller@tik.ee.ethz.ch>

	* 2-way phase connection setup

2002-04-05  Ralph Keller <keller@tik.ee.ethz.ch>

        * Changes incorporated as proposed by Masahiko

2002-04-05  Ralph Keller <keller@tik.ee.ethz.ch>

        * autoconf and automake-style Makefile
	
2002-04-04  Ralph Keller <keller@tik.ee.ethz.ch>

        * 1st public release of OSPF API
	