@@ -1,3 +1,8 @@
+2005-11-24 Paul Jakma <paul.jakma@sun.com>
+
+	* ospf_apiclient.c: add static qualifier to relevant functions.
+	* ospfclient.c: ditto
+
 2005-04-20 Paul Jakma <paul@dishone.st>
 
 	* Makefile.am: Add @INCLUDES@ and srcdir to allow out-of-tree
